rda-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: rda-app
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: rda-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rda-app
spec:
  selector:
    matchLabels:
      app: rda-app
  template:
    metadata:
      labels:
        app: rda-app
    spec:
      containers:
        - name: rda-app
          image: daniloaf/rda-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
