rda-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rda-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rda-app
                port:
                  number: 80
    - host: rda.offthread.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rda-app
                port:
                  number: 80
